# auto-resume

./: .gitignore  .pre-commit-config.yaml  README.md  default.env  environment.yml  project_schema.excalidraw  pyproject.toml
src/models/: job_model.py  tailored_resume_model.py  utils.py
src/prompts/: job_prompts.py  resume_prompts.py  tailor_resume_prompts.py
src/scripts/: build_latex.py  parse_pdf.py  process_job.py  tailor_resume.py  utils.py
src/service/: client.py
